cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(tempread C CXX ASM)
set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()

add_executable(tempread
	main.c
)

pico_enable_stdio_usb(tempread 1)
pico_enable_stdio_uart(tempread 1)

pico_add_extra_outputs(tempread)

target_link_libraries(tempread pico_stdlib)
